[FIX] Fixed the alignment inside the navbar, changed the logout button in a tag aand added the icon

--- a/dev/style/navbar.css
+++ b/dev/style/navbar.css
@@ -35,6 +35,12 @@ body:not(.signup-body, .login-body) {
     display: none;
 }
 
+.navbar-body {
+    position: fixed;
+    right: 0;
+    margin-right: 2%;
+}
+
 .navbar-body ul {
     list-style: none;
     display: flex;
@@ -59,29 +65,19 @@ body:not(.signup-body, .login-body) {
     padding: 5px 10px;
 }
 
-.nav-item form {
-    text-align: center;
-    height: 100%;
-}
-
-.nav-item input[type="submit"] {
+#btn-logout {
     font-family: Arial, Helvetica, sans-serif;
     background-color: transparent !important;
-    border: none;
     margin-right: 10px !important;
-    /*height: 100%;
-    padding: 5px 10px;
-    font-size: 16px;*/
+    border: none !important;
+    border-radius: 0;
     text-align: center;
+    padding: 0;
+    margin: 0 5px 0 0;
 }
 
-.nav-item input[type="submit"]:hover {
+#btn-logout:hover {
     text-decoration: underline;
-    background-color: red;
-}
-
-.nav-item input[type="submit"] > svg {
-    margin-top: 5px;
 }
 
 .navbar-body svg {
